--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@aws-crypto/sha256-js": "^5.2.0",
     "@aws-sdk/client-bedrock-runtime": "^3.749.0",
+    "@aws-sdk/client-s3": "^3.750.0",
     "@aws-sdk/credential-provider-node": "^3.749.0",
     "@aws-sdk/types": "^3.734.0",
     "@huggingface/transformers": "^3.3.3",
