--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.11",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20.11.0",
     "@types/pg": "^8.11.11",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -52,6 +53,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.5.0",
+    "mime-types": "^2.1.35",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "pathe": "^1.1.2",
