--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.11",
+    "@types/markdownlint": "^0.13.0",
+    "@types/markdownlint-rule-helpers": "^0.21.5",
     "@types/mime-types": "^2.1.4",
-    "@types/node": "^20.11.0",
+    "@types/node": "^20.17.19",
     "@types/pg": "^8.11.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/turndown": "^5.0.5",
     "jest": "^29.7.0",
+    "markdownlint": "^0.25.0",
+    "prisma": "^6.4.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@aws-crypto/sha256-js": "^5.2.0",
@@ -45,6 +50,7 @@
     "@langchain/openai": "^0.4.4",
     "@langchain/textsplitters": "^0.1.0",
     "@llamaindex/core": "^0.5.0",
+    "@prisma/client": "^6.4.1",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
@@ -53,6 +59,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.5.0",
+    "markdownlint-rule-helpers": "^0.28.0",
     "mime-types": "^2.1.35",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
